--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,14 +8,21 @@ site_name: 🍿 POPCORN
 theme: readthedocs
 
 
-## for mathjax
-#markdown_extensions:
-#  - pymdownx.arithmatex:
-#      generic: true
+markdown_extensions:
+  - footnotes # 支持脚注
+  - admonition # 支持提示块
+  - pymdownx.details
+  - pymdownx.superfences
+  - pymdownx.arithmatex:
+      generic: true
 
-#extra_javascript:
-#  - javascripts/mathjax.js
-#  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
+## for mathjax
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
+
+
+
 
 
 
