--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,25 +16,10 @@ markdown_extensions:
   - mdx_math
 
 ## for mathjax
-#extra_javascript:
-#  - javascripts/mathjax.js
-#  - https://polyfill.io/v3/polyfill.min.js?features=es6
-#  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
-#  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
-
-
-markdown_extensions:
-  - pymdownx.arithmatex:
-      generic: true
-
 extra_javascript:
-  - javascripts/katex.js
-  - https://unpkg.com/katex@0/dist/katex.min.js
-  - https://unpkg.com/katex@0/dist/contrib/auto-render.min.js
-
-extra_css:
-  - https://unpkg.com/katex@0/dist/katex.min.css
-
+  - javascripts/mathjax.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
 
 
