--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,10 +13,13 @@ markdown_extensions:
   - admonition # 支持提示块
   - pymdownx.details
   - pymdownx.superfences
+  - pymdownx.arithmatex:
+      generic: true
 
 ## for mathjax
 extra_javascript:
   - javascripts/mathjax.js
+  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
 
 
 
