--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,19 +9,16 @@ theme: matetrial
 
 
 markdown_extensions:
-  - footnotes # 支持脚注
-  - admonition # 支持提示块
-  - pymdownx.details
-  - pymdownx.superfences
   - pymdownx.arithmatex:
       generic: true
 
-## for mathjax
 extra_javascript:
-  - javascripts/mathjax.js
-  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
+  - javascripts/katex.js
+  - https://unpkg.com/katex@0/dist/katex.min.js
+  - https://unpkg.com/katex@0/dist/contrib/auto-render.min.js
 
-
+extra_css:
+  - https://unpkg.com/katex@0/dist/katex.min.css
 
 plugins:
   - search
