--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,16 +9,12 @@ theme: readthedocs
 
 
 markdown_extensions:
+  - pymdownx.details
+  - pymdownx.inlinehilite
   - pymdownx.arithmatex:
       generic: true
 
-extra_javascript:
-  - javascripts/katex.js
-  - https://unpkg.com/katex@0/dist/katex.min.js
-  - https://unpkg.com/katex@0/dist/contrib/auto-render.min.js
 
-extra_css:
-  - https://unpkg.com/katex@0/dist/katex.min.css
 
 plugins:
   - search
