--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,7 +18,11 @@ extra_javascript:
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
 
+extra_javascript:
+  - https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-AMS-MML_HTMLorMML
+markdown_extensions:
+  - mdx_math
+
 plugins:
   - search
-  - mkdocs-jupyter:
-    render_markdown: true
+  - mkdocs-jupyter
