--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,14 +8,14 @@ site_name: 🍿 POPCORN
 theme: readthedocs
 
 
-markdown_extensions:
-  - pymdownx.arithmatex:  # MathJax支援
-      generic: true
+#markdown_extensions:
+#  - pymdownx.arithmatex:  # MathJax支援
+#      generic: true
 
-extra_javascript:
-  - javascripts/mathjax.js
-  - https://polyfill.io/v3/polyfill.min.js?features=es6
-  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+#extra_javascript:
+#  - javascripts/mathjax.js
+#  - https://polyfill.io/v3/polyfill.min.js?features=es6
+#  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
 
 extra_javascript:
