--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,17 +7,17 @@ site_name: 🍿 POPCORN
 
 theme: readthedocs
 
+## mathjax for .md
+markdown_extensions:
+  - pymdownx.arithmatex:  # MathJax支援
+      generic: true
 
-#markdown_extensions:
-#  - pymdownx.arithmatex:  # MathJax支援
-#      generic: true
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
-#extra_javascript:
-#  - javascripts/mathjax.js
-#  - https://polyfill.io/v3/polyfill.min.js?features=es6
-#  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
-
-
+## mathjax for .ipynb
 extra_javascript:
   - https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-AMS-MML_HTMLorMML
 markdown_extensions:
