--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,13 +9,13 @@ theme: readthedocs
 
 ## mathjax for .md
 markdown_extensions:
-  - pymdownx.arithmatex:  # MathJax支援
+  - pymdownx.arithmatex:
       generic: true
 
 extra_javascript:
   - javascripts/mathjax.js
-  - https://polyfill.io/v3/polyfill.min.js?features=es6
-  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
+
 
 ## mathjax for .ipynb
 extra_javascript:
