--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,8 +12,8 @@ markdown_extensions:
   - pymdownx.arithmatex:
       generic: true
 
-extra_javascript:
-  - javascripts/mathjax.js
+#extra_javascript:
+  #- javascripts/mathjax.js
   #- https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
 
 
