--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,11 +9,15 @@ theme: readthedocs
 
 ## mathjax for .md
 markdown_extensions:
+  - footnotes # 支持脚注
+  - admonition # 支持提示块
+  - pymdownx.details
+  - pymdownx.superfences
   - pymdownx.arithmatex:
       generic: true
 
-#extra_javascript:
-  #- javascripts/mathjax.js
+extra_javascript:
+  - javascripts/mathjax.js
   #- https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
 
 
