--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,7 +25,7 @@ extra_javascript:
 extra_javascript:
   - https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.6/MathJax.js?config=TeX-AMS-MML_HTMLorMML
 markdown_extensions:
-  - mdx_math
+  #- mdx_math
 
 plugins:
   - search
