--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,9 +22,9 @@ extra_javascript:
 
 
 ## mathjax for .ipynb
-extra_javascript:
+#extra_javascript:
   #- https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.6/MathJax.js?config=TeX-AMS-MML_HTMLorMML
-markdown_extensions:
+#markdown_extensions:
   #- mdx_math
 
 plugins:
