--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,8 @@ site_name: 🍿 POPCORN
 #    - ch3: ch3.ipynb
 
 theme: readthedocs
+theme:
+  - logo: apple-touch-icon.png
 
 ## mathjax for .md
 markdown_extensions:
