--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,8 +5,9 @@ site_name: 🍿 POPCORN
 #  - ipynb:
 #    - ch3: ch3.ipynb
 
-theme: readthedocs
-theme:
+theme: 
+  - name: readthedocs
+  - user_color_mode_toggle: true 
   - logo: apple-touch-icon.png
 
 ## mathjax for .md
