--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,7 @@ site_name: 🍿 POPCORN
 
 theme: 
   - name: readthedocs
-  - user_color_mode_toggle: true 
+  #- user_color_mode_toggle: true 
   - logo: apple-touch-icon.png
 
 ## mathjax for .md
