--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,7 @@ site_name: 🍿 POPCORN
 theme: 
   - name: readthedocs
   #- user_color_mode_toggle: true 
-  - logo: apple-touch-icon.png
+  #- logo: apple-touch-icon.png
 
 ## mathjax for .md
 markdown_extensions:
