--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,9 +6,9 @@ site_name: 🍿 POPCORN
 #    - ch3: ch3.ipynb
 
 theme: 
-  - name: readthedocs
-  #- user_color_mode_toggle: true 
-  #- logo: apple-touch-icon.png
+  name: readthedocs
+  user_color_mode_toggle: true 
+  logo: apple-touch-icon.png
 
 ## mathjax for .md
 markdown_extensions:
