--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,10 +5,8 @@ site_name: 🍿 POPCORN
 #  - ipynb:
 #    - ch3: ch3.ipynb
 
-theme: 
-  name: readthedocs
-  user_color_mode_toggle: true 
-  logo: apple-touch-icon.png
+theme: readthedocs
+
 
 ## mathjax for .md
 markdown_extensions:
