--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,7 +13,7 @@ markdown_extensions:
   - footnotes # 支持脚注
   - admonition # 支持提示块
   - pymdownx.details
-  - pymdownx.superfences
+  #- pymdownx.superfences
   - pymdownx.arithmatex:
       generic: true
 
