--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,7 +14,7 @@ markdown_extensions:
   - admonition # 支持提示块
   #- pymdownx.details
   - pymdownx.highlight:
-      use_pygements: true
+      use_pygments: true
       auto_title: true
   #- pymdownx.superfences
   - pymdownx.arithmatex:
