--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,10 +13,7 @@ markdown_extensions:
   - footnotes # 支持脚注
   - admonition # 支持提示块
   #- pymdownx.details
-  - pymdownx.highlight:
-      use_pygments: true
-      auto_title: true
-  #- pymdownx.superfences
+  - pymdownx.superfences
   - pymdownx.arithmatex:
       generic: true
 
