--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,24 +12,13 @@ theme: readthedocs
 markdown_extensions:
   - footnotes # 支持脚注
   - admonition # 支持提示块
-  #- pymdownx.details
-  - pymdownx.highlight:
-      use_pygments: true
-      auto_title: true
-  - pymdownx.superfences
-  - pymdownx.arithmatex:
+  - pymdownx.arithmatex: # 支持語法上色
       generic: true
 
 extra_javascript:
   - javascripts/mathjax.js
-  #- https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
-
-
-## mathjax for .ipynb
-extra_javascript:
   - https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.6/MathJax.js?config=TeX-AMS-MML_HTMLorMML
-#markdown_extensions:
-#  - mdx_math
+
 
 plugins:
   - search
