--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,14 +7,22 @@ site_name: 🍿 POPCORN
 
 theme:     
   name: readthedocs
-  highlightjs: false  # 關閉預設的程式碼框
+  features:
+    - content.code.copy
+  hljs_languages:
+    - yaml
+    - rust
+    - c++
+    - python
+    - r 
+    - julia
 
 
 ## mathjax for .md
 markdown_extensions:
   - footnotes # 支持脚注
   - admonition # 支持提示块
-  - pymdownx.superfences # 支援語法上色
+  #- pymdownx.superfences # 支援語法上色
   - pymdownx.arithmatex: # 支持 latex 語法
       generic: true
 
