--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,6 +29,8 @@ extra_javascript:
   - javascripts/mathjax.js
   - https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.6/MathJax.js?config=TeX-AMS-MML_HTMLorMML
 
+extra_css:
+  - style.css
 
 plugins:
   - search
